{
    "name": "PlayerControls2",
    "maps": [
        {
            "name": "Gameplay",
            "id": "3de1592d-6785-4c9e-a783-0ebefc4ea15b",
            "actions": [
                {
                    "name": "OnMovePlayer2",
                    "type": "Value",
                    "id": "dcdb7be0-b7c8-44a1-8111-236eb0a5908a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InteractPlayer2",
                    "type": "Button",
                    "id": "963a5a89-05ff-49fa-b872-ffa0e8d9cf2e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RevivePlayer2",
                    "type": "Button",
                    "id": "efc4e617-c094-4cdf-a70c-b5ff423017f4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "OnMove",
                    "id": "6b6314a8-204b-4ad8-a7fc-4dafe0dc99d9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMovePlayer2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cbb32495-ffa7-4c90-9efe-47f2e4679a6f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMovePlayer2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2672ede6-c759-415b-b4dd-4fd10f000713",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMovePlayer2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6630f26a-1ef6-40a5-ad32-609517391580",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMovePlayer2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a915cf08-cbcb-4574-982c-2c5181b7fcd0",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMovePlayer2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b1c66efa-a072-4e83-9150-55d43874044a",
                    "path": "<Keyboard>/rightCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractPlayer2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11b11a68-6592-4f7c-8546-bcfa04aa6e8e",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RevivePlayer2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}